# Project_SI300A

./: .gitignore  CMakeLists.txt  README.md
Streaming_program/: AbstractRegisterDAO.cpp  AbstractRegisterDAO.h  CMakeLists.txt  controller.cpp  controller.h  credits.cpp  creditsAndHelp.cpp  creditsAndHelp.h  database_Structure.txt  helpText.txt  main.cpp  mainMenu.cpp  mainMenu.h  memoryDBConnection.cpp  memoryDBConnection.h  menu.cpp  menu.h  register.cpp  register.h  registerMemDAO.cpp  registerMemDAO.h  registerServerDAO.cpp  registerServerDAO.h  serverDBConnection.cpp  serverDBConnection.h  utils.cpp  utils.h
Streaming_program/include/config/: serverDBConnection.h  utils.h
Streaming_program/include/controller/: controller.h
Streaming_program/include/model/: creditsAndHelp.h  menu.h
Streaming_program/src/: main.cpp
Streaming_program/src/config/: serverDBConnection.cpp
Streaming_program/src/controller/: controller.cpp
Streaming_program/src/model/: credits.cpp  menu.cpp
Streaming_program/src/view/: registerServerDAO.cpp
include/config/: Logger.h  databaseType.h  memoryDBConnection.h  serverDBConnection.h  utils.h
include/controller/: controller.h
include/core/: HttpServer.h
include/enum/: LogLevel.h
include/model/: credits.h  creditsAndHelp.h  menu.h  register.h
include/view/: abstractRegisterDAO.h  registerMemDAO.h  registerServerDAO.h
src/: main.cpp
src/config/: Logger.cpp  memoryDBConnection.cpp  serverDBConnection.cpp  utils.cpp
src/controller/: controller.cpp
src/core/: HttpServer.cpp
src/model/: credits.cpp  creditsAndHelp.cpp  (+3 more)
(+4 files in other folders)
